[gd_scene load_steps=4 format=2]

[ext_resource path="res://Entities/Attacker.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]

[sub_resource type="SphereShape" id=2]

[node name="Attacker" type="Spatial"]
script = ExtResource( 1 )

[node name="DetectionArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="DetectionArea"]
shape = SubResource( 1 )

[node name="AttackArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="AttackArea"]
shape = SubResource( 2 )

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="WindupTimer" type="Timer" parent="."]
one_shot = true

[node name="RecheckTarget" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_AttackArea_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="WindupTimer" to="." method="damageTarget"]
[connection signal="timeout" from="RecheckTarget" to="." method="_on_RecheckTarget_timeout"]
